--- a/mandelbulber2/qt/dock_rendering_engine.ui
+++ b/mandelbulber2/qt/dock_rendering_engine.ui
@@ -530,61 +530,21 @@ bright</string>
         <property name="topMargin">
          <number>5</number>
         </property>
-        <item row="2" column="0">
+        <item row="3" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
            <string>Min. iteration to draw:</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>Brightness:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="1">
-         <widget class="MySpinBox" name="spinboxInt_nebula_min_iteration">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="toolTip">
-           <string>Minimum iteration count required to draw nebula pixels. Increase to ignore low-iteration regions.</string>
-          </property>
-          <property name="minimum">
-           <number>0</number>
-          </property>
-          <property name="maximum">
-           <number>9999</number>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="MyLineEdit" name="logedit_nebula_brightness">
-          <property name="toolTip">
-           <string>&lt;html&gt;&lt;body&gt;Sets the brightness of the nebula effect. Use the auto buttons to adjust based on current image brightness.&lt;/body&gt;&lt;/html&gt;</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0" colspan="2">
+        <item row="5" column="0" colspan="2">
          <widget class="MyCheckBox" name="checkBox_nebula_inner_enabled">
           <property name="text">
            <string>Inner fractal iterations</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="0" colspan="2">
-         <widget class="MyCheckBox" name="checkBox_nebula_outer_enabled">
-          <property name="text">
-           <string>Outer fractal iterations</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
+        <item row="2" column="1">
          <widget class="MyLineEdit" name="logedit_nebula_samples_per_pixel">
           <property name="toolTip">
            <string>Number of samples per pixel for nebula rendering. Higher values reduce noise but increase rendering time.</string>
@@ -592,20 +552,20 @@ bright</string>
          </widget>
         </item>
         <item row="1" column="0">
-         <widget class="QLabel" name="label_2">
+         <widget class="QLabel" name="label">
           <property name="text">
-           <string>Number of samples per pixel:</string>
+           <string>Brightness:</string>
           </property>
          </widget>
         </item>
-        <item row="5" column="0">
-         <widget class="QLabel" name="label_4">
+        <item row="4" column="0" colspan="2">
+         <widget class="MyCheckBox" name="checkBox_nebula_outer_enabled">
           <property name="text">
-           <string>Color mining:</string>
+           <string>Outer fractal iterations</string>
           </property>
          </widget>
         </item>
-        <item row="5" column="1">
+        <item row="6" column="1">
          <widget class="MyComboBox" name="comboBox_nebula_color_mixing">
           <property name="enabled">
            <bool>true</bool>
@@ -631,6 +591,59 @@ bright</string>
             <string>Darken by brighness</string>
            </property>
           </item>
+         </widget>
+        </item>
+        <item row="6" column="0">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>Color mining:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>Number of samples per pixel:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="MyLineEdit" name="logedit_nebula_brightness">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;body&gt;Sets the brightness of the nebula effect. Use the auto buttons to adjust based on current image brightness.&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="MySpinBox" name="spinboxInt_nebula_min_iteration">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="toolTip">
+           <string>Minimum iteration count required to draw nebula pixels. Increase to ignore low-iteration regions.</string>
+          </property>
+          <property name="minimum">
+           <number>0</number>
+          </property>
+          <property name="maximum">
+           <number>9999</number>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0" colspan="2">
+         <widget class="MyCheckBox" name="checkBox_nebula_constant_brightness">
+          <property name="acceptDrops">
+           <bool>true</bool>
+          </property>
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;It tries to keep image brighness constant.&lt;/p&gt;&lt;p&gt;It is not recommended for animations because can cause unintended flickering.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="text">
+           <string>Constant brightness mode</string>
+          </property>
          </widget>
         </item>
        </layout>
